Script now waiting for ticker to be off screen until changing images or switching pages to avoid visible lags, minor design changes.

--- a/html/css/infoscreen.css
+++ b/html/css/infoscreen.css
@@ -118,7 +118,8 @@ html, body {
     position: absolute;
     text-align: center;
     color: #333333;
-    background-color:rgba(250,250,250,0.65);
+    /* background-color:rgba(250,250,250,0.65); */
+    background: linear-gradient(to right, rgba(250,250,250,0.4),rgba(250,250,250,0.7),rgba(250,250,250,0.4));
     height: 10%;
     width: 98%;
     padding: 10px;
@@ -157,6 +158,25 @@ html, body {
     border-width: 5px;
     border-color: rgba(250,250,250,0);
 }
+
+*/
+.ticker_bg {
+    position: absolute;
+    bottom: 2%;
+    text-align: center;
+    color: #333333;
+    background: linear-gradient(to right, rgba(100,100,100,0.5), #333333); /*Standard*/
+    width: 28%;
+    height: 10%;
+    overflow: hidden;
+    margin-bottom: 1%;
+    margin-left: 1%;
+    margin-right: 71%;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+}
+/*
 
 .text {
     width: 100%;
@@ -219,13 +239,14 @@ html, body {
     bottom: 2%;
     text-align: center;
     color: #333333;
-    background-color:rgba(250,250,250,0.65);
-    width: 98%;
+    background: linear-gradient(to right, #333333, rgba(250,250,250,0.65)); /*Standard*/
+    /* background-color:rgba(250,250,250,0.65); */
+    width: 70%;
     height: 10%;
     padding: 5px;
     overflow: hidden;
     margin-bottom: 1%;
-    margin-left: 1%;
+    margin-left: 29%;
     margin-right: 1%;
     font-weight: bolder;
     font-size: 4em;
